--- a/proyect/package.json
+++ b/proyect/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyect",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "chalk": "^4.1.1",
     "console-table-printer": "^2.8.2",
